--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
- "ip": "Nellenus_SMP.aternos.me",
- "port": "55869",
+ "ip": "afkbottest.aternos.me",
+ "port": "48420",
  "name": "Bot-test",
  "auto-night-skip": "false",
- "loginmsg": "WASSUUUUUUUUUUUUUUUPPPPPPP"
+ "loginmsg": "WASSUUUUPP"
 }
